# ASCAM

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  eval_test_split.py  generate_figures.py  pyproject.toml  requirements.txt  setup.py  split_data.py  test_new_images.py
.github/workflows/: ci.yml
Classification_Model/: Classification model.ipynb
Object_Detection_Model/: Axonal Swellings.ipynb  Object_Detection_Code.ipynb  data.yaml
Running_Code/: Running_Code.ipynb  best_model.keras
ascam/: __init__.py  cli.py  config.py  pipeline.py
ascam/models/: __init__.py  classifier.py  detector.py
ascam/training/: __init__.py  augment.py  evaluate.py  train_cnn.py  train_yolo.py
ascam/utils/: __init__.py  image_utils.py  reproducibility.py  visualization.py
configs/: default_config.yaml
models/: README.md  checkpoint_best.pt  classifier.pt  training_results.json  yolo_training_results.json  yolov8s_best.pt
scripts/: ascam_yolo_training.py  reproduce.sh
tests/: conftest.py  test_classifier.py  test_config.py  test_detector.py  test_image_utils.py  test_pipeline.py
